{
  "version": 4,
  "terraform_version": "0.12.30",
  "serial": 21,
  "lineage": "7bc14e33-4f1f-b040-2405-6ea4640d56dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraEIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08a8d1515b0f47782",
            "domain": "vpc",
            "id": "eipalloc-0fdf39345853147aa",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07d07f76bf328511d",
            "private_dns": "ip-10-0-1-122.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.122",
            "public_dns": "ec2-15-164-24-59.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.24.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:internet-gateway/igw-0f1e4fc031af9ebcf",
            "id": "igw-0f1e4fc031af9ebcf",
            "owner_id": "737382971423",
            "tags": {
              "Name": "terra-IGW"
            },
            "vpc_id": "vpc-00ced50af3b090ed1"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fdf39345853147aa",
            "id": "nat-0e8fe867e24b46197",
            "network_interface_id": "eni-07d07f76bf328511d",
            "private_ip": "10.0.1.122",
            "public_ip": "15.164.24.59",
            "subnet_id": "subnet-093fcb748ccac73f6",
            "tags": {
              "Name": "terra_NAT"
            }
          },
          "dependencies": [
            "aws_eip.terraEIP",
            "aws_subnet.private01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030215d526224cbbf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e8fe867e24b46197",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030215d526224cbbf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-030215d526224cbbf",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra_private_rt"
            },
            "vpc_id": "vpc-00ced50af3b090ed1"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04254d1656d636f71",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1e4fc031af9ebcf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_public_rt"
            },
            "vpc_id": "vpc-00ced50af3b090ed1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a65194ad543cb5",
            "route_table_id": "rtb-030215d526224cbbf",
            "subnet_id": "subnet-093fcb748ccac73f6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044c7f0e5fcf5161f",
            "route_table_id": "rtb-04254d1656d636f71",
            "subnet_id": "subnet-0adce9d42d7a72fea"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-093fcb748ccac73f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-093fcb748ccac73f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "tags": {
              "Name": "terra-private-01-subnet"
            },
            "vpc_id": "vpc-00ced50af3b090ed1"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-0adce9d42d7a72fea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0adce9d42d7a72fea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "tags": {
              "Name": "terra-public-01-subnet"
            },
            "vpc_id": "vpc-00ced50af3b090ed1"
          },
          "dependencies": [
            "aws_vpc.terra-test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:vpc/vpc-00ced50af3b090ed1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd995809cd6c8fdb",
            "default_route_table_id": "rtb-0ea5c29db14be1c02",
            "default_security_group_id": "sg-081b1e6d11aca40f8",
            "dhcp_options_id": "dopt-7ca0c217",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00ced50af3b090ed1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea5c29db14be1c02",
            "owner_id": "737382971423",
            "tags": {
              "Name": "Terraform TEST1"
            }
          }
        }
      ]
    }
  ]
}